--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.18.1",
+    "asyncpg>=0.31.0",
     "fastapi[standard]>=0.128.0",
     "psycopg2>=2.9.11",
+    "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.45",
 ]
 
