--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ dependencies = [
     "asyncpg>=0.31.0",
     "fastapi[standard]>=0.128.0",
     "psycopg2>=2.9.11",
+    "pwdlib[argon2]>=0.3.0",
+    "pyjwt>=2.10.1",
     "python-dotenv>=1.2.1",
+    "rich>=14.2.0",
     "sqlalchemy>=2.0.45",
 ]
 
