--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Krypt is an end-to-end encrypted messaging app with a TUI."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiohttp[speedups]>=3.13.3",
     "alembic>=1.18.1",
     "asyncpg>=0.31.0",
     "cryptography>=46.0.4",
