--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "sqlalchemy>=2.0.45",
     "terminaltexteffects>=0.14.2",
     "textual>=7.5.0",
+    "uvicorn>=0.40.0",
 ]
 
 [tool.setuptools.packages.find]
